@@ -20,13 +20,57 @@
 
 <body>
 <div id="ubernavi" align="left" style="margin-left: 7px;">
-<span class="navititle">Quick Navigation:</span> [<a href="./">PvM Calc</a>] [<a href="pvp.html">PvP Calc</a>] [<a href="https://forum.talonro.com/topic/1292-talonro-calculator/" target="_blank">Bug Report/Requests</a>]
+<span class="navititle">Quick Navigation:</span> [<a href="./">PvM Calc</a>] [<a href="pvp.html">PvP Calc</a>] [<a href="https://forum.talonro.com/topic/28330-talonros-calculator-project/" target="_blank">Bug Report/Requests</a>]
 </div>
 <form name="calcForm">
 
 <div class="topic-main" align="left">
 <div align="left" style="margin-left: 6.5px;margin-top: 6.5px;">
   <strong style="color:#F00">NOTE: the calculator is player-made and while quite accurate, it is not a 100% representation of TalonRO's gameplay. It is highly discouraged to base in-game purchases on results obtained through this calculator.</strong>
+</div>
+<div class="topic">
+	<h3>CHANGELOG</h3>
+	<div class="pad">
+		<span><b>2018-06-08</b></span>
+						<ul>
+								<li><b>ITEMS</b>
+									<ul>
+										<li>All Aegir Items/Sets, Dropping Permeter, Hawk Eye, Eden Items, Pajamas Hats, Reforged Lord Kaho's Horns, Guillotine Katar, Burning Crown, Alchemy Glove, Ancient Dagger, Bunch of Carnations, Xmas Rudolph Santa Hat, Xmas Snowman Hat, Lude Mask, Maiden Hat, Staff of Thea, Advanced Items (Ex,: Fin Helm) and many others; [<a href="items-log.txt" target="_blank">FULL LIST</a>] </li>
+									</ul>
+							</li>
+						</ul>
+						<ul>
+							<li><b>CARDS</b>
+									<ul>
+										<li>Miming, Mini Octopus, Pom Spider, Wild Rider, Red Eruma, Siorava, Parus, Little Fatum, Detale;</li>
+									</ul>
+							</li>
+						</ul>
+						<ul>
+							<li><b>MONSTERS</b>
+									<ul>
+										<li>GMC Bosses, Valhalla Seals, Malangdo, Nightmare Pyramid, Spirit of Lord Kaho;</li>
+									</ul>
+							</li>
+						</ul>
+						<ul>
+							<li><b>EVOLVED/NEW PETS;</b></li>
+						</ul>
+						<ul>
+							<li><b>ITEMS FIX</b>
+									<ul>
+										<li>Deviruchi Headphones, Anubis Hat, Bayani Buwaya Skin Clothes, Sleipnir, Lacrima Stick, Chameleon Armor;</li>
+									</ul>
+							</li>
+						</ul>
+						<ul>
+							<li><b>ERRORS FIX</b>
+									<ul>
+										<li>Delay set to default, Mobdb Link, Set rates to 8x.</li>
+									</ul>
+							</li>
+						</ul>
+	</div>
 </div>
 <div class="topic" style="margin-left: 6.5px;">
 <h3 style="font-size:15px">Character Simulator</h3>
@@ -278,7 +322,7 @@
 	</tr>
 	<tr>
 		<td class="calc">
-			<select name="A_HEAD_DEF_PLUS" onchange="StAllCalc()"></select>
+		<select name="A_HEAD_DEF_PLUS" onchange="StAllCalc()"></select>
 			<select name="A_head1" onchange="StAllCalc()|ClickB_Item(this[this.selectedIndex].value)"></select>
 		</td>
 		<td class="calc">
@@ -781,7 +825,7 @@
 		<div class="topic" align="right" style="margin-left: 6.5px"><div style="margin-right: 5px;line-height: 165%;">
 			Original simulator created by <a href="http://roratorio.2-d.jp/ro/">ROratorio</a><br />
 			Translated and adapted by <a href="http://rode.doddlercon.com/">Doddler</a><br />
-			Adjusted to TalonRO by [FlynnQ, Kato and ZoneSoldier]
+			Adjusted to TalonRO by [FlynnQ, Kato, ZoneSoldier, Nattwara and Slap]
 		</div>
 	</div>
 </div>
