@@ -1,0 +1,55 @@
+[Update 2018-06-08]
+- Issue #29: Lord of the Dead Helm;
+- Issue #62: Enhanced Corsair; 
+- Issue #63: Enhanced Bone Helm;
+- Issue #65: Enhanced Helm of Angel;
+- Issue #66: Enhanced Hat of the Sun God;
+- Issue #70: Chilly Spell Book;
+- Issue #73: Gigantic Lance;
+- Issue #77: Dance Shoes;
+- Issue #76: Staff of Thea;
+- Issue #58: Advanced Binoculars;
+- Issue #59: Advanced Assassin Mask;
+- Issue #60: Advanced Welding Mask;
+- Issue #61: Advanced Safety Ring;
+- Issue #50: Improved Mage Hat;
+- Issue #51: Improved Magician Hat;
+- Issue #52: Improved Joker Jester;
+- Issue #53: Improved Bunny Band;
+- Issue #54: Improved Munak Hat;
+- Issue #55: Improved Bongun Hat;
+- Issue #56: Improved Opera Phantom Mask;
+- Issue #57: Improved Kitsune Mask;
+- Issue #37: Maiden Hat; 
+- Issue #67: Enhanced Variant Shoes;
+- Issue #78: Rosevine Whip;
+- Issue #79: Agent Katar;
+- Issue #80: Scarletto Nail; 
+- Issue #82: Chrome Metal Sword;
+- Issue #83: Changed a value Chrome Metal Two-Handed Sword;
+- Issues #45,46,47,48,49,103,104,105,106,107: Advanced Angelic Items/Set;
+- Added Bone Hat;
+- Issue #25: Lude Mask; 
+- Issue #26: Xmas Rudolph Hairband; 
+- Issue #27: Xmas Snowman Hat;
+- Issue #28: Xmas Rudolph Santa Hat;
+- Issue #30: Legionnaire Hat;
+- Issue #38: Bakonawa Agimat Tattoo;
+- Issue #39: Bangungot Agimat Tattoo;
+- Issue #40: Cat Hand Glove; 
+- Issue #42: Bunch of Carnations;
+- Issue #43: Buwaya Agimat Tattoo; 
+- Issue #71: End Sektura; 
+- Issue #72: Ygnus Stale;
+- Issue #74: Ancient Dagger;
+- Issue #75: Alchemy Glove; 
+- Issue #14: Burning Crown;
+- Issue #16: Guillotine Katar;
+- Issues #17,#18,#19,#20: Added Aegir Items/Combo; 
+- Issue #22: Reforged Lord Kaho's Horns;
+- Issue #24: Advanced Fin Helm;
+- Issue #7: Pajamas Hats; 
+- Issue #34: Added Eden Items;
+- Issue #10: Added Hawk Eye;
+- Issue #11: Added Dropping Permeter;
+- Issue #2:  Added Palace Guard[1];
