@@ -20,11 +20,6 @@ h1, h2, h3, h4, h5, h6 {
   text-decoration: none;
   padding: 0px;
   margin: 0px;
-
-  /*-moz-border-radius-topleft: 50px 50px;
-  -moz-border-radius-topright: 50px 50px;
-  border-top-left-radius: 20px 20px;
-  border-top-right-radius: 20px 20px;*/
 }
 h3 {
   margin-top: 0em;
@@ -32,7 +27,6 @@ h3 {
   font-size: 12px;
   background: url(../images/th.png);
   background-repeat: repeat-x;
-  /*border-left: 10px solid #000;*/
   color: #000;
   padding: 0.5em;
   font-variant: small-caps;
@@ -139,7 +133,6 @@ td.top {
 
 #container {
   width: 100%;
-  /*min-width: 640px;*/
 }
 .topic td.title {
   font-weight: bold;
@@ -158,7 +151,7 @@ td.top {
 }
 
 div#ubernavi {
-	background: url(images/th.png) repeat-x;
+	background: url(../images/th.png) repeat-x;
 	border-bottom: 1px solid #999;
 	border-right: 1px solid #999;
 	border-left: 1px solid #999;
@@ -177,6 +170,7 @@ div#ubernavi a:hover {
 	text-decoration: underline;
 }
 span.navititle {
-
 	font-weight:bold;
 }
+.pad {padding: 8px;}
+ul li+b {font-size: 14px;}
